tests/baselines/reference/reboundIdentifierOnImportAlias.errors.txt
reboundIdentifierOnImportAlias.ts(6,16): error TS2437: Module 'Foo' is hidden by a local declaration with the same name.


==== reboundIdentifierOnImportAlias.ts (1 errors) ====
    namespace Foo {
        export var x = "hello";
    }
    namespace Bar {
        var Foo = 1;
        import F = Foo;
                   ~~~
!!! error TS2437: Module 'Foo' is hidden by a local declaration with the same name.
    }